force-app/main/default/objects/Paid_Time_Off__c/Paid_Time_Off__c.object-meta.xml
<CustomObject>
    <label>Paid Time Off</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Paid Time Off Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Times Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>