force-app/main/default/objects/Paid_Time_Off__c/fields/Off_Day__c.field-meta.xml
<CustomField>
    <fullName>Off_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Off Day</label>
    <required>true</required>
    <type>Date</type>
</CustomField>