force-app/main/default/objects/Paid_Time_Off__c/recordTypes/Parental.recordType-meta.xml
<RecordType>
    <fullName>Parental</fullName>
    <active>true</active>
    <label>Parental</label>
</RecordType>