force-app/main/default/objects/Paid_Time_Off__c/recordTypes/Sick.recordType-meta.xml
<RecordType>
    <fullName>Sick</fullName>
    <active>true</active>
    <label>Sick</label>
</RecordType>