force-app/main/default/objects/Paid_Time_Off__c/recordTypes/Weekend.recordType-meta.xml
<RecordType>
    <fullName>Weekend</fullName>
    <active>true</active>
    <label>Weekend</label>
</RecordType>