force-app/main/default/objects/Paid_Time_Off__c/validationRules/WEEKEND_MUST_BE_SAT_OR_SUN.validationRule-meta.xml
<ValidationRule>
    <fullName>WEEKEND_MUST_BE_SAT_OR_SUN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Weekend&quot;,
    NOT(
        OR(
            TEXT(WEEKDAY(Off_Day__c)) = &quot;7&quot;,
            TEXT(WEEKDAY(Off_Day__c)) = &quot;1&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Weekend must be Saturday or Sunday.</errorMessage>
</ValidationRule>