force-app/main/default/objects/Paid_Time_Off__c/validationRules/Weekend_Sat_Sun.validationRule-meta.xml
<ValidationRule>
    <fullName>Weekend_Sat_Sun</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Weekend&quot;,
    NOT(
        OR(
            TEXT(WEEKDAY(Off_Day__c)) = &quot;6&quot;,
            TEXT(WEEKDAY(Off_Day__c)) = &quot;0&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Weekend must be Saturday or Sunday.</errorMessage>
</ValidationRule>